--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,15 +1,15 @@
 <nz-header>
-  <div nz-row nzJustify="space-between">
-    <div nz-col>
+  <nz-row nzJustify="space-between">
+    <nz-col>
       <div class="logo">
         <a href="#">
           <img src="/assets/logo.svg" alt="ng-zorro-antd" />
           <h1>NGX BIT</h1>
         </a>
       </div>
-    </div>
-    <div nz-col> </div>
-    <div nz-col>
+    </nz-col>
+    <nz-col> </nz-col>
+    <nz-col>
       <nz-space>
         <button
           style="width: 56px"
@@ -120,6 +120,6 @@
           </ng-template>
         </div>
       </nz-space>
-    </div>
-  </div>
+    </nz-col>
+  </nz-row>
 </nz-header>
