--- a/src/app/pages/dashboard/workbench/workbench.component.html
+++ b/src/app/pages/dashboard/workbench/workbench.component.html
@@ -91,7 +91,7 @@
             <ng-container *ngFor="let item of groups">
               <nz-col [nzSpan]="12">
                 <button nz-button nzType="text">
-                  <nz-avatar [nzSize]='24' [nzSrc]="item.avatar"></nz-avatar>
+                  <nz-avatar [nzSize]="24" [nzSrc]="item.avatar"></nz-avatar>
                   <span class="group-name">{{ item.group }}</span>
                 </button>
               </nz-col>
