--- a/projects/ngx-bit/router/bit-sider-menu/bit-sider-menu.component.html
+++ b/projects/ngx-bit/router/bit-sider-menu/bit-sider-menu.component.html
@@ -16,7 +16,11 @@
         </li>
       </ng-container>
       <ng-template #not>
-        <li nz-submenu [nzOpen]="nav.url[0] === router.fragments[0]" [nzPaddingLeft]="nav.url.length * 16">
+        <li
+          nz-submenu
+          [nzOpen]="nav.url[0] === router.fragments[0] && nav.url.length < router.fragments.length"
+          [nzPaddingLeft]="nav.url.length * 16"
+        >
           <span title>
             <i *ngIf="!!nav.icon" nz-icon [nzType]="nav.icon"></i>
             <span>
