--- a/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
+++ b/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
@@ -16,14 +16,14 @@
       </ng-container>
     </nz-breadcrumb>
     <nz-page-header-title>
-      <ng-container *ngIf="!bit.locale; else isMultiple">
-        {{ data[dict[router.fragments | Join: '/']].name }}
+      <ng-container *ngIf="!!(router.title | async); else defaultTitle">
+        {{ router.title | async }}
       </ng-container>
-      <ng-template #isMultiple>
+      <ng-template #defaultTitle>
         {{ data[dict[router.fragments | Join: '/']].name | object: bit.locale }}
       </ng-template>
     </nz-page-header-title>
-    <nz-page-header-subtitle>
+    <nz-page-header-subtitle *ngIf="router.subTitle | async">
       {{ router.subTitle | async }}
     </nz-page-header-subtitle>
     <nz-page-header-tags *ngIf="router.tags | async">
