--- a/src/app/pages/form/advanced/advanced.component.html
+++ b/src/app/pages/form/advanced/advanced.component.html
@@ -127,43 +127,126 @@
     </nz-col>
     <nz-col nzSpan="24">
       <nz-card nzTitle="成员管理">
-        <nz-table #usersTable [nzData]="form.get('users')?.value">
+        <nz-table #usersTable [nzData]="form.get('users')!.value" nzTableLayout="fixed" [nzFrontPagination]="false">
           <thead>
             <tr>
               <th>成员姓名</th>
               <th>工号</th>
               <th>所属部门</th>
-              <th>操作</th>
+              <th nzWidth="300px" nzRight>操作</th>
             </tr>
           </thead>
           <tbody>
             <ng-container *ngFor="let item of usersTable.data; index as i">
-              <ng-container *ngIf="!editUser.hasOwnProperty(i); else edit">
+              <ng-container *ngIf="!userForm.hasOwnProperty(item.employee_id); else edit">
                 <tr>
                   <td>{{ item.name }}</td>
-                  <td>{{ item.no }}</td>
+                  <td>{{ item.employee_id }}</td>
                   <td>{{ item.department }}</td>
-                  <td><a (click)="openEditUser(i)">编辑</a></td>
+                  <td><button type="button" nz-button nzType="link" (click)="openEditUser(i)">编辑</button></td>
                 </tr>
               </ng-container>
               <ng-template #edit>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                <tr [formGroup]="userForm[item.employee_id]">
                   <td>
-                    <a>保存</a>
-                    <nz-divider nzType="vertical"></nz-divider>
-                    <a>删除</a>
-                    <nz-divider nzType="vertical"></nz-divider>
-                    <a (click)="cancelEditUser(i)">取消</a>
+                    <nz-form-item>
+                      <nz-form-control nzHasFeedback [nzAutoTips]="{ default: { required: '不能为空' } }">
+                        <input nz-input placeholder="请输入" formControlName="name" />
+                      </nz-form-control>
+                    </nz-form-item>
+                  </td>
+                  <td>
+                    <nz-form-item>
+                      <nz-form-control nzHasFeedback [nzAutoTips]="{ default: { required: '不能为空' } }">
+                        <input nz-input placeholder="请输入" formControlName="employee_id" />
+                      </nz-form-control>
+                    </nz-form-item>
+                  </td>
+                  <td>
+                    <nz-form-item>
+                      <nz-form-control nzHasFeedback [nzAutoTips]="{ default: { required: '不能为空' } }">
+                        <input nz-input placeholder="请输入" formControlName="department" />
+                      </nz-form-control>
+                    </nz-form-item>
+                  </td>
+                  <td>
+                    <nz-form-item>
+                      <nz-form-control>
+                        <button
+                          type="button"
+                          nz-button
+                          nzType="link"
+                          [disabled]="!userForm[item.employee_id].valid"
+                          (click)="updateUser(i, userForm[item.employee_id]!.value)"
+                        >
+                          保存
+                        </button>
+                        <nz-divider nzType="vertical"></nz-divider>
+                        <button
+                          type="button"
+                          nz-button
+                          nzType="link"
+                          nz-popconfirm
+                          nzPopconfirmTitle="您确定要删除该数据吗?"
+                          (nzOnConfirm)="deleteUser(i)"
+                        >
+                          删除
+                        </button>
+                        <nz-divider nzType="vertical"></nz-divider>
+                        <button type="button" nz-button nzType="link" (click)="cancelEditUser(item.employee_id)">
+                          取消
+                        </button>
+                      </nz-form-control>
+                    </nz-form-item>
                   </td>
                 </tr>
               </ng-template>
             </ng-container>
+            <ng-container *ngIf="userForm.hasOwnProperty(0)">
+              <tr [formGroup]="userForm[0]">
+                <td>
+                  <nz-form-item>
+                    <nz-form-control nzHasFeedback [nzAutoTips]="{ default: { required: '不能为空' } }">
+                      <input nz-input placeholder="请输入" formControlName="name" />
+                    </nz-form-control>
+                  </nz-form-item>
+                </td>
+                <td>
+                  <nz-form-item>
+                    <nz-form-control nzHasFeedback [nzAutoTips]="{ default: { required: '不能为空' } }">
+                      <input nz-input placeholder="请输入" formControlName="employee_id" />
+                    </nz-form-control>
+                  </nz-form-item>
+                </td>
+                <td>
+                  <nz-form-item>
+                    <nz-form-control nzHasFeedback [nzAutoTips]="{ default: { required: '不能为空' } }">
+                      <input nz-input placeholder="请输入" formControlName="department" />
+                    </nz-form-control>
+                  </nz-form-item>
+                </td>
+                <td>
+                  <nz-form-item>
+                    <nz-form-control>
+                      <button type="button" nz-button nzType="link" [disabled]="!userForm[0].valid" (click)="addUser()">
+                        保存
+                      </button>
+                      <nz-divider nzType="vertical"></nz-divider>
+                      <button type="button" nz-button nzType="link" (click)="cancelAddUser()"> 取消 </button>
+                    </nz-form-control>
+                  </nz-form-item>
+                </td>
+              </tr>
+            </ng-container>
           </tbody>
         </nz-table>
+        <button type="button" nz-button nzType="dashed" nzBlock (click)="openAddUser()">
+          <i nz-icon nzType="plus"></i> 添加一行数据
+        </button>
       </nz-card>
     </nz-col>
   </nz-row>
+  <nz-affix style="position: absolute; bottom: 12px; right: 24px">
+    <button nz-button nzSize="large" nzShape="round" nzType="primary">提交</button>
+  </nz-affix>
 </form>
