--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div nz-col nzFlex="600px">
     <nz-card class="login-content">
       <div class="logo">
-        <img src="/assets/logo.svg" alt="vanx" />
+        <img src="/assets/logo.svg" alt="ng-zorro" />
       </div>
       <h1>打造一体化数据运营平台</h1>
       <form [formGroup]="form" nz-form (bitFormSubmit)="submit($event)">
