--- a/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
+++ b/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
@@ -4,9 +4,7 @@
     <nz-breadcrumb nz-page-header-breadcrumb>
       <ng-container *ngFor="let url of router.urls">
         <nz-breadcrumb-item>
-          <ng-container *ngIf="dict.hasOwnProperty(url) && data.hasOwnProperty(dict[url])">
-            {{ data[dict[url]].name }}
-          </ng-container>
+          {{ data[dict[url]]?.name }}
         </nz-breadcrumb-item>
       </ng-container>
     </nz-breadcrumb>
@@ -15,7 +13,7 @@
         {{ router.title | async }}
       </ng-container>
       <ng-template #defaultTitle>
-        {{ data[dict[router.fragments | Join: '/']].name }}
+        {{ data[dict[router.fragments | Join: '/']]?.name }}
       </ng-template>
     </nz-page-header-title>
     <nz-page-header-subtitle *ngIf="router.subTitle | async">
