--- a/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
+++ b/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
@@ -4,7 +4,7 @@
     <nz-breadcrumb nz-page-header-breadcrumb>
       <ng-container *ngFor="let url of router.urls">
         <nz-breadcrumb-item>
-          {{ data[dict[url]]?.name }}
+          {{ dict[url]?.name }}
         </nz-breadcrumb-item>
       </ng-container>
     </nz-breadcrumb>
@@ -13,7 +13,7 @@
         {{ router.title | async }}
       </ng-container>
       <ng-template #defaultTitle>
-        {{ data[dict[router.fragments | Join: '/']]?.name }}
+        {{ dict[router.path]?.name }}
       </ng-template>
     </nz-page-header-title>
     <nz-page-header-subtitle *ngIf="router.subTitle | async">
