--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -4,12 +4,15 @@
 
 .section-layout {
   margin-top: 64px;
+  overflow: hidden;
 }
 
-.inner-layout {
+nz-sider {
   overflow: auto;
+  height: 100%;
+  border-right: 1px solid #f0f0f0;
 }
 
-.content {
+nz-content {
   padding: 16px;
 }
