--- a/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
+++ b/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
@@ -31,9 +31,9 @@
         </ng-container>
       </nz-space>
     </nz-page-header-extra>
-    <nz-page-header-content *ngIf="router.content | async">
-      <ng-container *ngTemplateOutlet="router.content | async"></ng-container>
-    </nz-page-header-content>
+    <!--    <nz-page-header-content *ngIf="router.content | async">-->
+    <!--      <ng-container *ngTemplateOutlet="router.content | async"></ng-container>-->
+    <!--    </nz-page-header-content>-->
     <nz-page-header-footer *ngIf="router.footer | async">
       <ng-container *ngTemplateOutlet="router.footer | async"></ng-container>
     </nz-page-header-footer>
